force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Merge_Result__c/sf_devops__Merge_Result__c.object-meta.xml
<CustomObject>
    <description>Information about merging one branch to another in the VCS</description>
    <label>Merge Result</label>
    <nameField>
        <displayFormat>MR-{000000}</displayFormat>
        <label>Merge Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>