force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Merge_Result__c/fields/sf_devops__Merge_Date__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Merge_Date__c</fullName>
    <description>The Datetime when this merge completed</description>
    <label>Merge Date</label>
    <type>DateTime</type>
</CustomField>