force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Merge_Result__c/fields/sf_devops__Previous_Remote_Reference__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Previous_Remote_Reference__c</fullName>
    <description>The VCS specific remote reference on the target branch before the merge started</description>
    <label>Previous Remote Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>