force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Merge_Result__c/fields/sf_devops__Remote_Reference__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Remote_Reference__c</fullName>
    <description>The VCS specific reference to this merge</description>
    <label>Remote Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>