force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Merge_Result__c/fields/sf_devops__Source_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Source_Branch_Name__c</fullName>
    <description>the name of the branch this was a merge from.</description>
    <label>Source Branch Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>